[gd_scene load_steps=6 format=3 uid="uid://wgqxvbxride"]

[ext_resource type="Texture2D" uid="uid://7qwdhd5vg3tg" path="res://Addons/Tiny Swords/UI/Banners/Banner_Horizontal.png" id="1_dv1fe"]
[ext_resource type="Script" path="res://Scripts/UI/GameUIgd.gd" id="1_eyjqe"]
[ext_resource type="Texture2D" uid="uid://i0l8s425qe60" path="res://Addons/Tiny Swords/Deco/14.png" id="3_p3n5e"]
[ext_resource type="Texture2D" uid="uid://bjmmk4y6el48s" path="res://Addons/Tiny Swords/Resources/Resources/G_Idle.png" id="4_kiuwr"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j8lgq"]
texture = ExtResource("1_dv1fe")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 47.5173, 128, 128.483)

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_eyjqe")

[node name="TimerLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -91.0
offset_top = 19.0
offset_right = 92.0
offset_bottom = 76.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 41
text = "02:20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -192.0
offset_top = 7.0
offset_right = -12.0
offset_bottom = 97.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_j8lgq")

[node name="KillLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -43.0
offset_right = 31.0
offset_bottom = 14.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "9999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -48.0
offset_right = 88.0
offset_bottom = 16.0
grow_vertical = 2
texture = ExtResource("3_p3n5e")

[node name="Panel2" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -190.0
offset_top = 97.0
offset_right = -12.0
offset_bottom = 187.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_j8lgq")

[node name="GoldLabel" type="Label" parent="Panel2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -44.0
offset_right = -19.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "9999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel2"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -68.0
offset_right = 133.0
offset_bottom = 60.0
grow_vertical = 2
scale = Vector2(0.694419, 0.694419)
texture = ExtResource("4_kiuwr")
